# PySANEBridge

./: .gitignore  README.md  pyproject.toml
bridge/: __init__.py  main.py  settings.ini
bridge/connection/: cmd.py  connection.py
bridge/gui/: gui.py  pageviewer.py  settings.py
bridge/gui/subcontainers/: confirmation_popup.py  pageviewer.py  popup.py  question_window.py
bridge/scan/: scan.py
src/: main.py
src/connection/: cmd.py  connection.py
src/gui/: settings.py
src/scan/: scan.py
tests/: test_settings.py  test_ssh.py
