[project]
name = "pySANEBridge"
authors = [
    {name = "Louis Beal", email = "louis.j.beal@gmail.com"}
]
requires-python = ">=3.10"
description = "python GUI SANE bridge"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ['version']

dependencies = [
    "pyqt6",
    "pillow",
    "pymupdf",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = 'bridge.__version__'}
